# SortFolder

./: .gitignore  CMakeLists.txt  DownloadSort.py  README.md  SortFolder.py  main_sortFolder.py  requirments.txt
CPP/: CMakeLists.txt
CPP/src/: CMakeLists.txt  main.cpp
CPP/src/DirHandler/: CMakeLists.txt  cmake_install.cmake  directory_handler.cpp  directory_handler.h
CPP/src/DirHandler/Debug/: DirectoryHandler.lib
CPP/src/DirHandler/DirectoryHandler.dir/Debug/: DirectoryHandler.lib.recipe
CPP/src/DirHandler/DirectoryHandler.dir/Debug/DirectoryHandler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  DirectoryHandler.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CPP/src/util/: CMakeLists.txt  utility.cpp  utility.h
Python/src/: FolderSort.py
src/: DownloadSort.py
src/CPP/: main.cpp
src/CPP/include/: directory_handler.cpp  directory_handler.h
src/CPP/include/Directory Handler/: CmakeLists.txt  directory_handler.cpp
